# daves-amplifier

./: .env.sample  .gitignore  CLAUDE.md  Makefile  README.md  daves-amplifier.code-workspace
.claude/: settings.json
.claude/commands/: create-py-project.md  create_tool.md  destructive-init.md  pre-push-check.md  prime.md  upgrade.md
ai_context/: IMPLEMENTATION_PHILOSOPHY.md  MODULAR_DESIGN_PHILOSOPHY.md
apps/_react-vite-template/: CLAUDE.md  Makefile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
apps/_react-vite-template/src/: App.tsx
py_project/: pyproject.toml
py_project/src/py_project/llm/: provider_openai.py
py_project/src/py_project/utils/: dotenv_helper.py
py_projects/_py_project_template/: CLAUDE.md  Makefile
py_projects/_py_project_template/src/my_tool/llm/: provider_openai.py
py_projects/docs-updater/: Makefile  pyproject.toml
py_projects/docs-updater/src/docs_updater/llm/: provider_openai.py
tools/_py_tool_template/: Makefile  pyproject.toml
tools/docs-updater/: CLAUDE.md  Makefile  README.md
tools/docs-updater/src/docs_updater/: __main__.py  crawler.py
tools/docs-updater/src/docs_updater/utils/: dotenv_helper.py
